--- a/UMallAPI/package.json
+++ b/UMallAPI/package.json
@@ -13,8 +13,10 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "md5": "^2.3.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "uuid": "^8.3.2"
   }
 }
